[package]
name = "binance_l3_est"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.0"
egui = { version = "0.32.0", features = ["default"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.46", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
tungstenite = { version = "0.27", features = ["native-tls"] }
futures-util = "0.3.31"
egui_extras = { version = "*", features = ["all_loaders"] }

env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
reqwest = { version = "0.12.22", features = ["json"] }
url = "2.5.4"
rust_decimal = { version = "1.37.2", features = ["macros"] }
egui_plot = "0.33.0"
